[package]
name = "quipquick"
version = "0.1.0"
edition = "2021"
authors = ["Shi Yan"]
description = "A static blog generator"
repository = "https://github.com/shi-yan/quipquick"
license = "MIT OR Apache-2.0"
keywords = ["blog", "markdown", "static site generator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "5.1"
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
time = { version = "0.3", features = ["serde", "formatting", "parsing"]}
serde = { version = "1.0", features = ["derive"] }
rust-embed = "8.2"
clap = { version = "4.5", features = ["derive"]}
fs_extra = "1.3"
markdown = "1.0.0-alpha.16"
dateparser = "0.2"
words-count = "0.1"
chrono = "0.4"
image = "0.24"
serde_yaml = "0.9"
slugify = "0.1"
rss = "2.0"
itertools = "0.12"
inquire = { version = "0.6", features = ["date"] }
html-escape = "0.2"
