[package]
name = "quipquick"
version = "0.1.1"
edition = "2024"
authors = ["Shi Yan"]
description = "A static blog generator"
repository = "https://github.com/shi-yan/quipquick"
license = "MIT OR Apache-2.0"
keywords = ["blog", "markdown", "static generator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "6.3"
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.23"
time = { version = "0.3", features = ["serde", "formatting", "parsing"]}
serde = { version = "1.0", features = ["derive"] }
rust-embed = "8.8"
clap = { version = "4.5", features = ["derive"]}
fs_extra = "1.3"
markdown = "1.0.0"
dateparser = "0.2"
words-count = "0.1"
chrono = "0.4"
image = "0.25"
serde_yaml = "0.9"
slugify = "0.1"
rss = "2.0"
itertools = "0.14"
inquire = { version = "0.9", features = ["date"] }
html-escape = "0.2"
titlecase = "3.6"
